--- a/Concurrent-Systems/SSE/2015-code/part-b/Makefile
+++ b/Concurrent-Systems/SSE/2015-code/part-b/Makefile
@@ -3,27 +3,20 @@
 code-segment-2: code-segment-2.c
 	gcc -g -O0 -march=westmere code-segment-2.c -o code-segment-2
 
-code-segment-3: code-segment-3.c
-	gcc -g -O0 -march=westmere code-segment-3.c -o code-segment-3 
-
 code-segment-4: code-segment-4.c
 	gcc -g -O0 -march=westmere code-segment-4.c -o code-segment-4
 
 run-code-segment-2: code-segment-2
 	./code-segment-2
 
-run-code-segment-3: code-segment-3
-	./code-segment-3
-
 run-code-segment-4: code-segment-4
 	./code-segment-4
 
-all: code-segment-2 code-segment-3 code-segment-4
+all: code-segment-2 code-segment-4
 
 run: all
 	./code-segment-2
-	./code-segment-3
 	./code-segment-4
 
 clean:
-	rm code-segment-2 code-segment-3 code-segment-4 
+	rm code-segment-2 code-segment-4
