--- a/Concurrent-Systems/SSE/2018-code/part-b/Makefile
+++ b/Concurrent-Systems/SSE/2018-code/part-b/Makefile
@@ -1,5 +1,5 @@
-all: code-segments.h code-segment-2.c code-segment-3.c code-segment-4.c main.c
-	gcc -g -O0 -march=native code-segments.h code-segment-2.c \
+all: code-segments.h code-segment-1.c code-segment-2.c code-segment-3.c code-segment-4.c main.c
+	gcc -g -O0 -march=native code-segments.h code-segment-1.c code-segment-2.c \
 	code-segment-3.c code-segment-4.c main.c -o main 
 
 run: all 
