updated makefile and added 2023 exam solutions for routines 1 to 5

--- a/Concurrent-Systems/SSE/Makefile
+++ b/Concurrent-Systems/SSE/Makefile
@@ -1,6 +1,6 @@
 # 2013 has no Makefile, ignoring that 
-YEARS := 2008 2009 2010 2011 2012 2014 2015 2016 2017 2018 
-PARTS := part-b part-c
+YEARS := 2008 2009 2010 2011 2012 2014 2015 2016 2017 2018 2019 2023
+PARTS := part-b part-c Question-1
 
 .PHONY: all $(YEARS)
 
